--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,8 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="gray">#eae8e8</color>
+    <color name="write">#FFFFFF</color>
+    <color name="bg_bantouming">#1F000000</color>
+    <color name="bg_Login_nor">#FFBEBE</color>
+    <color name="bg_Login_select">#FF3737</color>
 </resources>
