--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,5 +7,11 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+    <style name="TextStyle">
+        <item name="android:textSize">20dp</item>
+        <item name="android:textColor">#462777</item>
+
+
+    </style>
 
 </resources>
