--- a/app/src/main/res/layout/activity_scan_record.xml
+++ b/app/src/main/res/layout/activity_scan_record.xml
@@ -1,59 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="match_parent">
 
-    tools:context="com.bwf.tuanche.test.ScanRecordActivity">
-
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp">
-        <TextView
-            android:id="@+id/scan1"
-            android:layout_weight="1"
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:gravity="center"
-            android:text="车型1"/>
-        <TextView
-            android:id="@+id/scan2"
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="车型2"/>
-        <TextView
-            android:id="@+id/scan3"
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="车型3"/>
-        <TextView
-            android:id="@+id/scan4"
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="车型4"/>
-    </LinearLayout>
+        android:layout_height="50dp">
 
-    <Button
-        android:id="@+id/btn_scre"
+        <ImageView
+            android:id="@+id/img_my_back"
+            android:layout_width="30dp"
+            android:layout_height="40dp"
+            android:padding="5dp"
+            android:layout_centerVertical="true"
+            android:src="@mipmap/icon_back"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:textSize="30sp"
+            android:layout_centerInParent="true"
+            android:gravity="center"
+            android:text="浏览记录"/>
+
+    </RelativeLayout>
+    <com.bwf.tuanche.selectcity.MyRecyclerView
+        android:id="@+id/record_MyRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:text="ScanRecord"/>
-    <TextView
-        android:id="@+id/tv_scn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="25dp"
-        android:layout_centerInParent="true"
-        />
+        android:layout_height="match_parent"/>
 
-
-
-</RelativeLayout>
+</LinearLayout>
