--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,13 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorCity">#FF4847</color>
+    <color name="colorButton">#FF3837</color>
+    <color name="colorLine">#ACACAC</color>
+    <color name="colortintLine">#D1D5DC</color>
+    <color name="hintLine">#ECECEC</color>
+    <color name="grayLine">#E8E8E8</color>
+    <color name="withe">#ffffff</color>
+    <color name="colorTextHuang">#FD9908</color>
+    <color name="colorTextBlack">#000000</color>
 </resources>
