--- a/app/src/main/res/layout/activity_my.xml
+++ b/app/src/main/res/layout/activity_my.xml
@@ -29,6 +29,7 @@
                 android:background="@mipmap/user_bg_head">
 
                 <Button
+                    android:id="@+id/btn_record_nowlogin"
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:layout_centerHorizontal="true"
