--- a/app/src/main/res/layout/activity_select_city.xml
+++ b/app/src/main/res/layout/activity_select_city.xml
@@ -6,16 +6,26 @@
     android:orientation="vertical"
     tools:context="com.bwf.tuanche.selectcity.SelectCityActivity">
 
-    <TextView
-        android:id="@+id/select_city_title"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:drawableLeft="@mipmap/icon_back"
-        android:paddingLeft="15dp"
-        android:paddingRight="15dp"
-        android:gravity="center"
-        android:text=""
-        android:textSize="30sp" />
+        android:layout_height="50dp">
+        <ImageView
+            android:id="@+id/select_city_back"
+            android:layout_width="40dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"
+            android:padding="10dp"
+            android:src="@mipmap/icon_back"/>
+        <TextView
+            android:id="@+id/select_city_title"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:gravity="center"
+            android:text=""
+            android:textSize="30sp" />
+    </LinearLayout>
 
     <ScrollView
         android:layout_width="match_parent"
