--- a/app/src/main/res/layout/my_rescycle_item.xml
+++ b/app/src/main/res/layout/my_rescycle_item.xml
@@ -8,38 +8,51 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        >
-
-        <com.facebook.drawee.view.SimpleDraweeView
-            android:id="@+id/img_record"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_gravity="center_vertical"
-            android:src="@mipmap/default_special_1" />
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/tv_test"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textSize="25dp"
+            android:text="测试123"/>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center_vertical"
-            android:orientation="vertical"
-            android:paddingLeft="10dp">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            >
 
-            <TextView
-                android:id="@+id/tv_record_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="途观" />
+            <com.facebook.drawee.view.SimpleDraweeView
+                android:id="@+id/img_record"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_gravity="center_vertical"
+                android:src="@mipmap/default_special_1" />
 
-            <TextView
-                android:id="@+id/tv_record_price"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="指导价：19.98-31.58万" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:orientation="vertical"
+                android:paddingLeft="10dp">
+
+                <TextView
+                    android:id="@+id/tv_record_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="途观" />
+
+                <TextView
+                    android:id="@+id/tv_record_price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="指导价：19.98-31.58万" />
+
+            </LinearLayout>
 
         </LinearLayout>
-
     </LinearLayout>
 
 </LinearLayout>
