--- a/app/src/main/res/layout/activity_my.xml
+++ b/app/src/main/res/layout/activity_my.xml
@@ -69,6 +69,7 @@
                     android:layout_marginTop="10dp"
                     android:drawableTop="@mipmap/icon_jilu"
                     android:padding="10dp"
+                    android:textAlignment="center"
                     android:text="浏览记录" />
             </LinearLayout>
 
@@ -102,7 +103,8 @@
                     android:layout_weight="1"
                     android:drawableTop="@mipmap/icon_wode_mai"
                     android:padding="10dp"
-                    android:text="        买车订单"
+                    android:textAlignment="center"
+                    android:text="买车订单"
 
                     />
 
@@ -113,7 +115,8 @@
                     android:layout_weight="1"
                     android:drawableTop="@mipmap/icon_wode_yangche"
                     android:padding="10dp"
-                    android:text="       养车订单" />
+                    android:textAlignment="center"
+                    android:text="养车订单" />
 
                 <TextView
                     android:layout_width="0dp"
@@ -122,7 +125,8 @@
                     android:layout_weight="1"
                     android:drawableTop="@mipmap/icon_wode_maiche"
                     android:padding="10dp"
-                    android:text="       卖车订单" />
+                    android:textAlignment="center"
+                    android:text="卖车订单" />
             </LinearLayout>
 
             <TextView
@@ -149,7 +153,8 @@
                     android:layout_weight="1"
                     android:drawableTop="@mipmap/icon_wode_hongbao"
                     android:padding="10dp"
-                    android:text="          红包"
+                    android:textAlignment="center"
+                    android:text="红包"
 
                     />
 
@@ -160,7 +165,8 @@
                     android:layout_weight="1"
                     android:drawableTop="@mipmap/icon_diyongquan"
                     android:padding="10dp"
-                    android:text="         优惠券" />
+                    android:textAlignment="center"
+                    android:text="优惠券" />
 
                 <TextView
                     android:layout_width="0dp"
@@ -169,7 +175,8 @@
                     android:layout_weight="1"
                     android:drawableTop="@mipmap/icon_libao"
                     android:padding="10dp"
-                    android:text="        大礼包" />
+                    android:textAlignment="center"
+                    android:text="大礼包" />
             </LinearLayout>
 
             <LinearLayout
