--- a/app/src/main/res/layout/item_fragment1_adapter.xml
+++ b/app/src/main/res/layout/item_fragment1_adapter.xml
@@ -8,15 +8,15 @@
         android:id="@+id/img_buycar"
         android:src="@mipmap/ic_launcher"
         android:layout_width="50dp"
-        android:layout_marginLeft="20dp"
         android:layout_marginTop="5dp"
+        android:layout_gravity="center_horizontal"
         android:layout_height="50dp" />
 
     <TextView
         android:id="@+id/tv_buycar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
+        android:layout_gravity="center_horizontal"
         android:text="测试"
         android:textSize="15dp" />
 </LinearLayout>
