--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,11 +27,14 @@
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
-
+    <style name="Theme.UMDefault" parent="android:style/Theme.NoTitleBar"></style>
     <declare-styleable name="FAB">
         <!-- Background color -->
         <attr name="bg_color" format="color|reference"/>
         <attr name="bg_color_pressed" format="color|reference"/>
     </declare-styleable>
-
+    <style name="PopupAnimation">
+        <item name="android:windowEnterAnimation">@anim/popup_enter</item>
+        <item name="android:windowExitAnimation">@anim/popup_exit</item>
+    </style>
 </resources>
